# uni-timetable-react-nest

./: README.md  compose.yaml  pyproject.toml
.github/workflows/: backend.yaml  frontend.yaml  scripts.yaml
backend/: package.json  pnpm-lock.yaml
backend/prisma/: schema.prisma
backend/src/: app.controller.ts  app.module.ts
docker/: .gitignore
docker/backend/: Dockerfile
docker/db/: Dockerfile
docker/db/init/: init.sql
docker/frontend/: Dockerfile
frontend/: .eslintrc.json  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.tsx  reportWebVitals.ts
frontend/src/components/404/: index.tsx
frontend/src/components/Footer/: index.tsx
frontend/src/components/Profile/: index.tsx
frontend/src/components/Signin/: index.tsx
frontend/src/components/Signup/: index.tsx
frontend/src/pages/404/: index.tsx
frontend/src/pages/Profile/: index.tsx
frontend/src/pages/Register/: DepartmentInput.tsx  FacaltyInput.tsx  YearInput.tsx  data.tsx  index.tsx
frontend/src/pages/Search/: index.tsx
frontend/src/pages/Signin/: index.tsx  schema.ts
frontend/src/pages/Signup/: index.tsx  schema.ts
frontend/src/pages/Timetable/: index.tsx
scripts/: Makefile  pyproject.toml
scripts/scraping/: data.py  interface.py  scraper.py  scraping.py
scripts/scraping/faculties/: __init__.py  agriculture.py  arts.py  economics.py  education.py  engineering.py  law.py  liberal_arts.py  medicine.py  pharmacy.py  science.py
