[tool.poetry]
name = "scripts"
version = "0.1.0"
authors = ["test"]
description = ""
readme = "README.md"
packages =  [
    { include = "scripts", from = "." },
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"
selenium = "^4.21.0"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
